Exercise 01/webserver/securitygroup.tf
// security group for the webserver
resource "aws_security_group" "webserver-sg" {
    name = "webserver-sg"

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"] # Be cautious, this allows SSH from any IP. Replace with your IP for security.
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
